--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body{
+    font-size: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,12 +13,14 @@ body{
     align-items:center;
     background: white;
     width: 30%;
-    height: 30%;
-    border-radius: 60px;
+    height: 50%;
+    border-radius: 30px;
+    border: 1px solid #333;
 }
-#numeros{
+
+#numeros h1{
     text-align: center;
-    font-size: 20px;
+    font-size: 50px;
 }
 
 .boton{
@@ -25,6 +28,7 @@ body{
     justify-content: space-between;
     gap: 50px;
 }
+
 button{
     width: 60px;
     height: 60px;
@@ -32,8 +36,8 @@ button{
     border-radius: 20px;
 }
 button:hover{
-    filter: opacity(0.5);
-    scale: 1.1;
+    filter: opacity(0.7);
+    scale: 1.04;
 }
 .rojo{
     background: red;
@@ -45,48 +49,30 @@ button:hover{
     width: 30px;
 }
 
-@media (max-width:420px) {
+
+
+@media (max-width:1024px) {
     .cronometroP{
         display: flex;
         flex-direction: column;
         justify-content:center;
         align-items:center;
         background: white;
-        width: 100px;
-        height: 80px;
-        border-radius: 55px;
-    }
-    #numeros{
-        font-size: 10px;
-    }
-    .boton{
-        display: flex;
-        justify-content: space-between;
-        gap: 5px;
-    }
-    button{
-        width: 30px;
-        height: 30px;
-        font-size: 10px;
-        border-radius: 10px;
-    }
-    button:hover{
-        filter: opacity(0.5);
-        scale: 1.1;
-    }
-    .repetir{
-        width: 15px;
+        width: 300px;
+        height: 350px;
     }
 
-}
-@media (max-width:810px) {
-    .cronometroP{
+    .boton{
+        margin-top: 50px;
         display: flex;
-        flex-direction: column;
-        justify-content:center;
-        align-items:center;
-        background: white;
-        width: 40%;
-        height: 25%;
+        justify-content: space-between;
+        gap: 30px;
+    }
+
+    button{
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+        border-radius: 10px;
     }
 }
